--- a/custom.css
+++ b/custom.css
@@ -1,8 +1,16 @@
 :root {
 	--theme-color: var(--dark-red);
 }
+
 .page-break {
-	page-break-before: always;	
+	page-break-before: always;
+}
+
+@media print {
+	.no-print,
+	.no-print * {
+		display: none !important;
+	}
 }
 
 .initials-circle {
@@ -26,7 +34,7 @@
 }
 
 .right-col {
-    max-width: 750px;
+	max-width: 750px;
 	width: 100%;
 }
 
@@ -71,7 +79,7 @@
 	border-bottom: 1px solid var(--moon-gray);
 	font-size: 1.25em;
 	font-weight: 500;
-	padding-bottom: .25em;
+	padding-bottom: 0.25em;
 }
 
 .work-title {
